[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]

[tool.setuptools]
include-package-data = true
[tool.setuptools.package-dir]
"" = "src"
[tool.setuptools.packages.find]
include = ["ftwpki*"]
namespaces = true
where = ["src"]

[tool.setuptools_scm]
# Erläuterung:
# ^v               -> Muss mit 'v' beginnen
# (?P<version>...) -> Die Versionsnummer (0.0.1)
# (?P<suffix>...)  -> Optionaler Anhang wie -test, a1, .rc1
tag_regex = '^v(?P<version>[^\+|-]+)(?P<suffix>[-._][a-zA-Z0-9]+)?$'
write_to = "src/ftwpki/ca_root_creator/_version.py"

[project]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Text Processing :: Filters",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: 3.15",
  "Operating System :: OS Independent",
]
dependencies = ["ftw-pki-libs"]
description = "A specialized tool for automated and deterministic Root CA creation within the FTW PKI ecosystem."
dynamic = ["version"]
name = "ftw-pki-caroot-creator"
readme = "README.md"
requires-python = ">=3.11"
license = "LGPL-2.1-or-later"

[project.urls]
# Documentation = "https://ftw-patch.readthedocs.io/en/stable/"
Documentation = "https://github.com/fitzz-ftw/ftw-pki-caroot-creator/blob/main/README.md"
Homepage = "https://github.com/fitzz-ftw/ftw-pki-caroot-creator"
Issues = "https://github.com/fitzz-ftw/ftw-pki-caroot-creator/issues"
Repository = "https://github.com/fitzz-ftw/ftw-pki-caroot-creator.git"
Changelog = "https://github.com/fitzz-ftw/ftw-pki-caroot-creator/blob/main/CHANGELOG.md"

[project.scripts]
ftwpkicaroot = "ftwpki.ca_root_creator.programms:prog_ca_root_creator_cert"

[project.optional-dependencies]
doc = [
  "sphinx < 9.0.0",
  "myst-parser",
  "sphinx-argparse",
  "autoclasstoc",
  "sphinx-nefertiti",
  "sphinx-copybutton",
  "sphinx-design",
  "sphinx-mdinclude",
  "sphinxcontrib-mermaid",
]

dev = ["ftw-pki-caroot-creator[test,doc,lint]", "esbonio==0.16.5"]
lint = ["ruff"]
test = ["pytest", "pytest-mock", "pytest-cov", "ftw-devtools"]

[[project.authors]]
email = "FitzzTeXnikWelt@t-online.de"
name = "Fitzz TeXnik Welt"

[[project.maintainers]]
email = "FitzzTeXnikWelt@t-online.de"
name = "Fitzz TeXnik Welt"

[tool.distutils.egg_info]
egg_base = "."

[tool.ruff]
exclude = ["pyproject.toml"]
line-length = 100
src = ["src"]
target-version = "py311"

[tool.ruff.lint]
# E/W = Pycodestyle (Standard-Fehler/Warnungen)
# F = Pyflakes (Logik-Fehler wie ungenutzte Imports)
# I = isort (Sortierung der Imports)
# B = flake8-bugbear (findet potenzielle Design-Fehler)
ignore = ["W293", "W291", "B904"]
select = ["E", "W", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["ftwpki"]

[tool.ruff.format]
indent-style = "space"
quote-style = "double"

[tool.pytest.ini_options]
# Pytest-Optionen für die Testausführung
addopts = [
  "--doctest-glob=get_started_*.rst",
  "--cov-report=term",
  "--cov-report=html",
]
minversion = "7.0"
testpaths = [
  "doc/source/devel", # Durchsucht Ihr Dokumentationsverzeichnis nach .rst-Dateien
  "tests", # Durchsucht das Unit-Test-Verzeichnis (für test_*.py)
]

[tool.coverage.run]
branch = true
omit = ["**/_version.py",
]

source = ["ftwpki.ca_root_creator"]

[tool.coverage.report]
exclude_also = ["if *__name__ *=*[\"']__main__.*"]
fail_under = 100
show_missing = true
#format = "text"
#
[tool.coverage.html]
# Das entspricht --cov-report=html:doc/build/coverage
directory = "doc/build/test_coverage/caroot"

[tool.esbonio.sphinx]
buildCommand = ["sphinx-build", "-M", "dirhtml", "doc/source", "./_build"]
pythonCommand = ["${venv:../.venv311/}"]

